--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "seri-padi",
+  "type": "module",
   "version": "1.0.0",
   "description": "Thanks for downloading this template!",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
-    "mssql": "^11.0.0"
+    "mssql": "^11.0.0",
+    "nodemon": "^3.1.4",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
