--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Thanks for downloading this template!",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
