--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.4.4",
     "mssql": "^11.0.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
