--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.4",
     "mssql": "^11.0.0",
     "nodemailer": "^6.9.14",
